--- a/style.css
+++ b/style.css
@@ -46,6 +46,24 @@ h1 {
   font-size: 3rem;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
+p,
+a.button {
+  font-size: 1.3rem;
+}
+
+label,
+input {
+  font-size: 1.1rem;
+}
+
+footer p {
+  font-size: 1rem;
+}
+
 h2,
 footer {
   text-align: center;
@@ -56,8 +74,6 @@ footer {
 body {
   margin-inline: 1rem;
 }
-
-
 
 .logoContainer {
   width: 100%;
@@ -111,7 +127,7 @@ section {
   font-size: 1.3rem;
 }
 
-.buttonCV {
+.button {
   height: 5rem;
   border-radius: 1.5rem;
   border: black solid 1px;
@@ -132,6 +148,8 @@ section {
   border-radius: 1rem;
   width: clamp(20rem, 90%, 30rem);
   height: 30rem;
+  display: flex;
+  justify-content: center;
 }
 
 .cardContainer {
@@ -141,12 +159,30 @@ section {
   gap: 2rem;
 }
 
+.card .button {
+  border-radius: 5rem;
+  display: flex;
+  align-items: center;
+  margin: 0.5rem;
+  padding: 1rem;
+}
+
+.card a {
+  text-align: center;
+}
+
+.button ion-icon {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 0.5rem;
+}
+
 label {
   margin-top: 1rem;
 }
 
 fieldset {
-  width: clamp(20rem, calc(100% - 3rem), 25rem);
+  width: clamp(15rem, calc(100% - 3rem), 30rem);
   margin: 1rem auto;
   padding: 1.5rem;
   border-radius: 1rem;
@@ -302,7 +338,7 @@ span.navButton {
   
   header {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 
   .logoContainer {
@@ -322,7 +358,7 @@ span.navButton {
   nav {
     height: 3rem;
     all: unset;
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     display: flex;
     justify-content: flex-end;
   }
@@ -359,7 +395,8 @@ span.navButton {
   }
 
   nav li {
-    margin-right: 2rem;
+    margin-left: 0;
+    margin-right: 5rem;
     padding: 0;
   }
 
