--- a/style.css
+++ b/style.css
@@ -271,12 +271,14 @@ nav {
   transform: scale(1, 0);
   transform-origin: top;
   transition: transform 500ms ease-in 100ms ease-out;
+  -webkit-transition: transform 500ms ease-in 100ms ease-out;
 }
 
 nav a {
   text-decoration: none;
   opacity: 0;
   transition: opacity 1300ms ease-in-out;
+  -webkit-transition: opacity 1300ms ease-in-out;
 }
 
 nav li {
@@ -297,12 +299,14 @@ nav li {
   position: absolute;
   left: 0.4rem;
   transition: opacity 600ms ease-in-out;
+  -webkit-transition: opacity 600ms ease-in-out;
 }
 
 #navClose {  
   position: absolute;
   opacity: 0;
   transition: opacity 600ms ease-in-out;
+  -webkit-transition: opacity 600ms ease-in-out;
 }
 
 .navCloseShift {  
@@ -459,4 +463,3 @@ nav li {
   }
 
 }
-
