--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 :root {
   --bg-light-grey: #e0ecda;
-  --bg-mid-grey-mobile: #979797;
+  --bg-mid-grey-mobile: #b6b6b6;
   --bg-mid-grey-desktop: #9cb492;
   --bg-light-green: #6bec20;
   --bg-dark-green: #3c9911;
