--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@ html {
 }
 
 :root {
-  --bg-light-grey: #e0ecda;
-  --bg-mid-grey-mobile: #b6b6b6;
-  --bg-mid-grey-desktop: #9cb492;
-  --bg-light-green: #6bec20;
-  --bg-dark-green: #3c9911;
+  --bg-light-grey: #e9e9e9;
+  --bg-mid-grey: #b6b6b6;
+  --bg-light-green: #82ff3a;
+  --bg-dark-green: #154200;
 }
 
 /*** TABLE OF CONTENTS: ***/
@@ -169,7 +168,7 @@ section {
 }
 
 .button {
-  background-color: var(--bg-mid-grey-mobile);
+  background-color: var(--bg-mid-grey);
   border-radius: 3rem;
   padding: 1.3rem;
 }
@@ -192,6 +191,8 @@ section {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .cardContainer {
@@ -202,11 +203,12 @@ section {
 }
 
 .card .button {
+  height: 4rem;
   border-radius: 5rem;
   display: flex;
   align-items: center;
-  margin: 0.5rem;
   padding: 1rem;
+  margin-bottom: 2rem;
 }
 
 .card a {
@@ -217,6 +219,19 @@ section {
   width: 2rem;
   height: 2rem;
   margin-right: 0.5rem;
+}
+
+img {
+  width: 85%;
+  border-radius: 1rem;
+  margin: 0 auto;
+  box-shadow: 2px 2px 5px var(--bg-mid-grey);
+}
+
+.cardText {
+  width: 85%;
+  height: calc(6rem + 4%);
+  margin: 1.5rem auto;
 }
 
 /* Contact section - mobile */
@@ -359,7 +374,8 @@ nav li {
 
 @media (min-width: 600px) {
 
-  section:not(.techContainer) {
+  .hero,
+  .aboutMe {
     width: clamp(30rem, calc(60% - 10rem), 50rem);
     margin: 0 auto;
     margin-top: 8rem;
@@ -395,7 +411,7 @@ nav li {
   }
 
   .button {
-    background-color: var(--bg-mid-grey-desktop);
+    background-color: var(--bg-mid-grey);
   }
 
   .submit {
