--- a/style.css
+++ b/style.css
@@ -94,7 +94,10 @@ input {
 
 legend {
   font-size: 1.2rem;
-  align-text: center;
+}
+
+.legendWrapper {  
+  text-align: center;
 }
 
 /* Mobile layout */
