--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   --bg-light-grey: #e9e9e9;
   --bg-mid-grey: #b6b6b6;
   --bg-light-green: #82ff3a;
-  --bg-mid-green: #bce9a3;
+  --bg-mid-green: #c5e9a3;
   --bg-dark-green: #154200;
 }
 
