--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 :root {
   --bg-light-grey: #e9e9e9;
-  --bg-mid-grey: #c5cabd;
+  --bg-mid-grey: #c9d4b5;
   --bg-light-green: #82ff3a;
   --bg-mid-green: #c5e9a3;
   --bg-dark-green: #154200;
