--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ html {
 }
 
 :root {
-  --bg-light-grey: #e9e9e9;
-  --bg-mid-grey: #c9d4b5;
+  --bg-light-grey: #eaf0db;
+  --bg-mid-grey: #b6b6b6;
   --bg-light-green: #82ff3a;
   --bg-mid-green: #c5e9a3;
   --bg-dark-green: #154200;
@@ -415,7 +415,7 @@ nav li {
   }
 
   .cardText {
-    margin-block-end: 1.5rem;
+    margin-block-end: 3.2rem;
   }
 
   .contentWrapper {
