Edit light grey

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   --bg-bold-green: #82ff3a;
   --bg-dark-green: #154200;
   --bg-pale-green: #c5e9a3;
-  --bg-light-grey: #eaf0db;
+  --bg-light-grey: #ecf0e3;
 }
 
 /*** TABLE OF CONTENTS: ***/
