--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   --bg-bold-green: #82ff3a;
   --bg-dark-green: #154200;
   --bg-pale-green: #c5e9a3;
-  --bg-light-grey: #f0f2eb;
+  --bg-light-grey: #ecf0e3;
 }
 
 /*** TABLE OF CONTENTS: ***/
@@ -127,18 +127,18 @@ body {
 }
 
 .hero {
-  margin-block-start: 10rem;
+  margin-top: 10rem;
 }
 
 section {
-  margin-block-start: 6rem;
+  margin-top: 6rem;
   margin-inline: 1rem;
 }
 
 /* About Me section - mobile */
 
 .techContainer {
-  margin-block-start: 0;
+  margin-top: 0;
   display: flex;
   flex-wrap: wrap;  
   justify-content: center;
@@ -169,6 +169,10 @@ section {
 .tech span {
   color: white;
   font-size: 1.3rem;
+}
+
+.react {
+  display: none;      /* 😭😭😭 */
 }
 
 .button {
@@ -212,7 +216,7 @@ section {
   display: flex;
   align-items: center;
   padding: 1rem;
-  margin-block: 2rem 1rem;
+  margin-bottom: 2rem;
 }
 
 .card a {
@@ -222,7 +226,7 @@ section {
 .button ion-icon {
   width: 2rem;
   height: 2rem;
-  margin-inline-end: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 img {
@@ -251,11 +255,11 @@ fieldset {
 #email-address,
 #message {
   width: 100%;
-  margin-block-end: 1rem;
+  margin-bottom: 1rem;
 }
 
 label {
-  margin-block-start: 1rem;
+  margin-top: 1rem;
 }
 
 .submit {
@@ -270,7 +274,7 @@ footer {
   color: white;
   width: 100%;
   height: 8rem;
-  margin-block-start: 5rem;
+  margin-top: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -382,11 +386,11 @@ nav li {
   .aboutMe {
     width: clamp(30rem, calc(60% - 10rem), 50rem);
     margin: 0 auto;
-    margin-block-start: 8rem;
+    margin-top: 8rem;
   }
 
   .techContainer {
-    padding-block-start: 0;
+    padding-top: 0;
   }
 
   .cardText {    
@@ -408,7 +412,7 @@ nav li {
   .logo ion-icon {
     width: 3rem;
     height: 3rem;
-    margin-block-end: 0.2rem;
+    margin-bottom: 0.2rem;
   }
 
   /* Desktop layout */
@@ -418,34 +422,13 @@ nav li {
     padding: 0;
   }
 
-  .card,
-  img {
-    display: block;
-  }
-
-  h3,
-  .buttonWrapper {
-    text-align: center;
-  }
-
-  .card .button {
-    display: inline-block;
-    width: fit-content;
-    margin-inline: 0.3rem;
-    margin-block: 3rem 1.5rem;
-  }
-
-  .card span {    
-    display: inline-block;
-    transform: translateY(-0.55rem);
-  }
-
-  .cardText {
-    margin-block: 1rem 3rem;
+  .contentWrapper {
+    display: flex;
+    flex-direction: column;
   }
 
   .submit {
-    margin-block-end: 3rem;
+    margin-bottom: 3rem;
   }
 
   /* Desktop navigation formatting */
@@ -494,8 +477,8 @@ nav li {
 
   nav li {
     font-size: 1rem;
-    margin-inline-start: 0;
-    margin-inline-end: 5rem;
+    margin-left: 0;
+    margin-right: 5rem;
     padding: 0;
   }
 
